--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 
 
 # ** Only works in OSs that support newer versions of fnmatch (Bash 4+)
-/sites/default/**/files
+#/sites/default/**/files
 /sites/default/**/private
 
 # Packages #
